# my-service-bus-sdk

./: Cargo.toml  README.md  TODO.md
.github/workflows/: test.yml
my-service-bus/: Cargo.toml
my-service-bus-abstractions/: Cargo.toml  README.md
my-service-bus-abstractions/src/: abstractions.rs  errors.rs  lib.rs  message_headers.rs  message_id.rs  my_sb_message.rs  serializer.rs
my-service-bus-abstractions/src/publisher/: message_headers.rs  message_to_publish.rs  mod.rs  my_telemetry.rs  publisher.rs  serializer.rs
my-service-bus-abstractions/src/publisher/with_internal_queue/: data.rs  mod.rs  publisher_with_internal_queue.rs
my-service-bus-abstractions/src/queue_with_intervals/: enqueue_range.rs  index_range.rs  index_to_insert_range.rs  index_to_insert_value.rs  index_to_remove.rs  index_to_remove_range.rs  index_to_remove_value.rs  iterator.rs  iterator_inner.rs  mod.rs  queue_index_range.rs  queue_with_intervals.rs  queue_with_intervals_inner.rs  remove_range.rs  split_queue.rs
my-service-bus-abstractions/src/subscriber/: current_message.rs  delivered_message.rs  delivered_message_telemetry.rs  deserializer.rs  messages_reader.rs  messages_reader_inner.rs  mod.rs  subscriber.rs  subscriber_callback.rs
my-service-bus-macros/: Cargo.toml
my-service-bus-macros/.github/workflows/: test.yml
my-service-bus-macros/src/: lib.rs
my-service-bus-macros/src/fn_impl_protobuf_model/: generate.rs
my-service-bus-macros/src/fn_impl_protobuf_model_with_version/: generate.rs
my-service-bus-shared/: Cargo.toml
my-service-bus-shared/src/: lib.rs
my-service-bus-shared/src/page_compressor/: zip.rs
my-service-bus-shared/src/page_compressor/compressed_page_builder/: compressed_page_builder.rs  compressed_page_builder_by_files.rs  compressed_page_builder_single_file.rs
my-service-bus-shared/src/page_compressor/compressed_page_reader/: compressed_page_reader.rs
my-service-bus-shared/src/page_id/: split_queue_with_intervals_by_pages.rs
my-service-bus-shared/src/protobuf_models/: message.rs
my-service-bus-tcp-client/: Cargo.toml
my-service-bus-tcp-client/src/: ignore_message.rs  lib.rs  my_sb_client.rs  new_connection_handler.rs  tcp_client_data.rs
my-service-bus-tcp-client/src/publishers/: my_sb_publisher.rs  my_sb_publisher_data.rs  publish_process_by_connection.rs
my-service-bus-tcp-client/src/subscribers/: my_sb_subscribers.rs  my_sb_subscribers_data.rs
my-service-bus-tcp-shared/: Cargo.toml
my-service-bus-tcp-shared/src/: delivery_package_builder.rs  lib.rs  my_sb_serializer_metadata.rs  new_messages_model.rs  new_messages_packet_builder.rs  packet_versions.rs  tcp_contract_to_string.rs  tcp_contracts.rs  tcp_protocol_version.rs  tcp_serializer.rs
my-service-bus-tcp-shared/src/tcp_serializers/: byte.rs  byte_array.rs  convert_from_raw.rs  i32.rs  i64.rs  legacy_long.rs  message_headers.rs  messages_to_deliver.rs  messages_to_publish.rs  mod.rs  pascal_string.rs  queue_with_intervals.rs
my-service-bus/src/: lib.rs
