[package]
name = "my-service-bus-abstractions"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-telemetry = ["my-telemetry"]


[dependencies]
async-trait = "*"
tokio = { version = "*", features = ["full"] }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git", optional = true }
