[package]
name = "my-service-bus-macros"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
types-reader = { tag = "0.4.0", git = "https://github.com/MyJetTools/types-reader.git" }
