[package]
name = "my-service-bus-tcp-client"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus-abstractions = { path = "../my-service-bus-abstractions" }
my-service-bus-shared = { path = "../my-service-bus-shared" }
my-service-bus-tcp-shared = { path = "../my-service-bus-tcp-shared", features = [
    "tcp-client",
] }
my-tcp-sockets = { tag = "0.1.11", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
chrono = "*"
async-trait = "*"
