[package]
name = "my-service-bus-tcp-shared"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-service-bus-abstractions = { path = "../my-service-bus-abstractions" }
my-service-bus-shared = { path = "../my-service-bus-shared" }
my-tcp-sockets = { tag = "0.1.8", git = "https://github.com/MyJetTools/my-tcp-sockets.git", features = [
    "statefull_serializer",
    "serialize_as_ref",
] }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
